@@ -1,4 +1,8 @@
 2012-08-09
+ Started on infrastructure for package definitions.
+ Include a snit definition file in distribution.
+
+2012-08-09
  New token "nl" to handle "dict for"'s variable list.
  
 2012-01-05
